Fixing layout and routing issues for Slangtionary application structure.

--- a/imports/ui/components/appFooterLayout.html
+++ b/imports/ui/components/appFooterLayout.html
@@ -1,4 +1,8 @@
 <body>
+  {{> appFooterLayout }}
+</body>
+
+<template name="appFooterLayout">
   <footer class="wideBar topBorder">
     <p>Developed through <a href="https://github.com/marhalish/slangtionary">GitHub</a> & <a href="https://utopian.io/project/marhalish/slangtionary/github/116466707/all">Utopian.io</a></p>
     <span><a href="https://busy.org/@slangtionary">Busy.org</a></span>
@@ -6,4 +10,4 @@
     <span><a href="https://www.facebook.com/Slangtionary1/">Facebook</a></span>
     <span><a href="https://www.instagram.com/slangtionary1/">Instagram</a></span>
   </footer>
-</body>
+</template>
