--- a/imports/ui/components/appHeaderLayout.html
+++ b/imports/ui/components/appHeaderLayout.html
@@ -1,4 +1,8 @@
 <body>
+  {{> appHeaderLayout }}
+</body>
+
+<template name="appHeaderLayout">
   <header class="wideBar btmBorder">
     <div>
       <h1 class="center">Slangtionary</h1>
@@ -21,4 +25,4 @@
       </ul>
     </div>
   </header>
-</body>
+</template>
