--- a/imports/ui/layouts/about.html
+++ b/imports/ui/layouts/about.html
@@ -1,11 +1,11 @@
 <body>
   <h1> Welcome to Slangtionary </h1>
 
-  {{> about_slangtionary }}
+  {{> about }}
 
 </body>
 
-<template name ="about_slangtionary">
+<template name ="about">
   <h2> About Slangtionary </h2>
   <p> Slangtionary info </p>
 </template>
