--- a/imports/client/layout/mainLayout.html
+++ b/imports/client/layout/mainLayout.html
@@ -1,18 +1,25 @@
+<body>
+  {{> mainLayout }}
+</body>
+
 <template name="mainLayout">
   <div class="mainContent">
     <h2> Welcome to Slangtionary! </h2>
     <p> This project is currently under development. More information will be avilable soon</p>
   </div>
 
+<!--
   <nav>
-    {{> Template.dynamic template=appHeader }}
+    {{> appHeader }}
   </nav>
-
+-->
+<!--
   <main>
     {{> yield }}
   </main>
 
   <footer>
-    {{> Template.dynamic template=appFooter }}
+    {{> appFooter }}
   </footer>
+-->
 </template>
