--- a/imports/client/layout/_mainLayout.html
+++ b/imports/client/layout/_mainLayout.html
@@ -1,12 +1,14 @@
 <body>
-  {{> mainLayout }}
+  {{> _mainLayout }}
 </body>
 
-<template name="mainLayout">
+<template name="_mainLayout">
   <div class="mainContent">
     <h2> Welcome to Slangtionary! </h2>
     <p> This project is currently under development. More information will be avilable soon</p>
   </div>
+
+  {{ yield }}
 
 <!--
   <nav>
@@ -17,7 +19,6 @@
   <main>
     {{> yield }}
   </main>
-
   <footer>
     {{> appFooter }}
   </footer>
