Fixed routing issue by downgrading to ostrio:flow-router-extra@3.4.3 and fixing other template issues.

--- a/client/main.css
+++ b/client/main.css
@@ -75,7 +75,7 @@
   }
   .mainContent {
     background-color:#EEE;
-    min-height:900px;
+    /*min-height:900px;*/
     padding:2px;
     overflow:hidden;
   }
